@@ -10,6 +10,8 @@ from AccessControl import ClassSecurityInfo
 from Globals import InitializeClass
 #XXX Why do newsViewers inherit/extend OFS.Folder.Folder???
 from OFS import Folder
+from DateTime import DateTime
+from zExceptions import NotFound
 
 # Silva/News interfaces
 from Products.Silva.interfaces import IContent
@@ -40,8 +42,18 @@ class NewsViewer(Content, Folder.Folder):
         self._number_to_show_archive = 10
         self._number_is_days = 0
         self._filters = []
+        self._year_range = 2
 
     # ACCESSORS
+
+    security.declareProtected(SilvaPermissions.AccessContentsInformation,
+                              'year_range')
+    def year_range(self):
+        """Returns number of items to show
+        """
+        if not hasattr(self, '_year_range'):
+            self._year_range = 2
+        return self._year_range
 
     security.declareProtected(SilvaPermissions.AccessContentsInformation,
                               'number_to_show')
@@ -216,7 +228,33 @@ class NewsViewer(Content, Folder.Folder):
                 retval.append(item)
         return retval
 
+    
+    security.declareProtected(SilvaPermissions.AccessContentsInformation,
+                              'year_in_range_trigger')
+    def year_in_range_trigger(self, year):
+        """only years within self._year_range are allowed,
+        so raise notfound if the year requested is
+        outside of this range.
+        """
+        if not self.year_in_range(year):
+            raise NotFound()
+ 
+    security.declareProtected(SilvaPermissions.AccessContentsInformation,
+                              'year_in_range')
+    def year_in_range(self, year):
+        """only years within self._year_range are allowed,
+        return true if year is in range
+        """
+        return abs(year - DateTime().year()) < self.year_range()
+
     # MANIPULATORS
+ 
+    security.declareProtected(SilvaPermissions.ChangeSilvaContent,
+                              'set_year_range')
+    def set_year_range(self, number):
+        """Sets the range of years to show links to
+        """
+        self._year_range = number
 
     security.declareProtected(SilvaPermissions.ChangeSilvaContent,
                               'set_number_to_show')
