@@ -18,7 +18,6 @@
               previous batch/previous;
               next batch/next;
               user_role view/get_user_role;
-              silva_root view/silva_root;
               formatdate nocall:view/service_news/format_date;
               "
 >
@@ -27,27 +26,9 @@
     Archive of <tal:block i18n:name="title" tal:content="model/get_title" />
   </h2>
 
-  <table class="timetable top">
-    <tbody>
-      <tr class="even">
-        <td>
-          <span class="previous">&lt;&lt;&nbsp;</span><a href="3" tal:content="structure python: '%s' % str(int(currentyear) - 1)" tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) - 1)">2001</a>
-        </td>
-        <tal:repeat repeat="month months">
-          <tal:define define="id repeat/month/index">
-	    <td tal:condition="repeat/month/start" class="vertical-separator"> | </td>
-            <td align="center" tal:attributes="class python:test(id == int(currentmonth) - 1, 'selected_month', '');">
-              <a href="#" tal:content="month" tal:attributes="href python: '?month=%s&year=%s&view=view_archive' % (id + 1, currentyear)"></a>
-            </td>
-	    <td class="vertical-separator"> | </td>
-          </tal:define>
-        </tal:repeat>
-        <td>
-          <a href="3" tal:content="structure python: '%s' % str(int(currentyear) + 1)" tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) + 1)">2003</a><span class="next">&nbsp;&gt;&gt;</span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<tal:block define="toporbottom string:top">
+ <metal:macro use-macro="here/timetable_macro/macros/timetable" />
+</tal:block>
 
   <div class="offsetnav"      
      tal:condition="python: previous or next"
@@ -85,27 +66,9 @@
     <a tal:condition="next" tal:attributes="href python:'?view=view_archive&month=%s&year=%s&offset=%s' % (currentmonth, currentyear, (offset + batch_size))">next</a>
   </div>
 
-  <table class="timetable bottom">
-    <tbody>
-      <tr>
-        <td>
-          <span class="previous">&lt;&lt;&nbsp;</span><a href="3" tal:content="structure python: '%s' % str(int(currentyear) - 1)" tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) - 1)">2001</a>
-        </td>
-        <tal:repeat repeat="month months">
-          <tal:define define="id repeat/month/index">
-	    <td tal:condition="repeat/month/start" class="vertical-separator"> | </td>
-            <td align="center" tal:attributes="class python:test(id == int(currentmonth) - 1, 'selected_month', '');">
-              <a href="#" tal:content="month" tal:attributes="href python: '?month=%s&year=%s&view=view_archive' % (id + 1, currentyear)"></a>
-            </td>
-	    <td class="vertical-separator"> | </td>
-          </tal:define>
-        </tal:repeat>
-        <td>
-          <a href="3" tal:content="structure python: '%s' % str(int(currentyear) + 1)" tal:attributes="href python:'?month=%s&year=%s&view=view_archive' % (currentmonth, int(currentyear) + 1)">2003</a><span class="next">&nbsp;&gt;&gt;</span>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<tal:block define="toporbottom string:bottom">
+ <metal:macro use-macro="here/timetable_macro/macros/timetable" />
+</tal:block>
 
     <p class="p viewlink">
       <a href="#" tal:attributes="href string:?view=view_news" i18n:translate="">view news</a>
